crates/cyrs-sema/src/snapshots/cyrs_sema__schema_aware__tests__schema_merge_node_no_constraint_ok.snap
---
source: crates/cyrs-sema/src/schema_aware.rs
expression: "run(&stmt, &schema)"
---
diagnostics: 0
