crates/cyrs-sema/src/snapshots/cyrs_sema__schema_aware__tests__schema_merge_node_non_unique_key_error.snap
---
source: crates/cyrs-sema/src/schema_aware.rs
expression: "run(&stmt, &schema)"
---
diagnostics: 1
  E3009: MERGE key {age} on label(s) :Person is not backed by a declared uniqueness constraint
