crates/cyrs-sema/src/snapshots/cyrs_sema__schema_aware__tests__schema_merge_rel_non_unique_key_error.snap
---
source: crates/cyrs-sema/src/schema_aware.rs
expression: "run(&stmt, &schema)"
---
diagnostics: 2
  E3003: property `weight` is not declared on relationship type(s) :KNOWS
  E3009: MERGE key {weight} on relationship type(s) :KNOWS is not backed by a declared uniqueness constraint
