crates/cyrs-sema/src/snapshots/cyrs_sema__schema_aware__tests__schema_unknown_procedure_error.snap
---
source: crates/cyrs-sema/src/schema_aware.rs
expression: "run(&stmt, &schema)"
---
diagnostics: 1
  E3008: unknown procedure `no.such.proc`
